--- a/form-input-wave/myFormInputWave/index.html
+++ b/form-input-wave/myFormInputWave/index.html
@@ -7,13 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Form Input Wave</title>
     <link rel="stylesheet" href="./styles.css">
-    <script src="./script.js" defer></script>
 </head>
 
 <body>
     <div class="container">
         <h1>Let's Login</h1>
-        <form action="#">
+        <form>
             <div class="form-control">
                 
                 <input type="email" id="email" name="email" autocomplete="off">
@@ -30,6 +29,8 @@
             <p class="text">Don't have an account? <a href="#">Register</a></p>
         </form>
     </div>
+    <script src="./script.js"></script>
+
 </body>
 
 </html>
